--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,6 +13,12 @@ jobs:
         uses: actions/checkout@v2
         with:
           ref: master
+      
+      - name: test python 2-3
+        run: | 
+          sudo apt install 2to3
+          python -m venv dist/working/env
+          which 2to3
 
       - name: Compile
         run: |
