--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,8 +25,8 @@ jobs:
           
       - name: check outputs
         run: |
+          cp ./dist/ladybug-blender-*.zip ./ladybug-blender.zip
           ls -R
-          cp ladybug-blender-*.zip ladybug-blender.zip
 
       - name: release
         run: |
